; ModuleID = '/home/carl/AnghaBench/linux/net/ipv4/extr_ah4.c_ah_tmp_req.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv4/extr_ah4.c_ah_tmp_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahash_request = type { i32 }
%struct.crypto_ahash = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ahash_request* (%struct.crypto_ahash*, i32*)* @ah_tmp_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ahash_request* @ah_tmp_req(%struct.crypto_ahash* %0, i32* %1) #0 {
  %3 = alloca %struct.crypto_ahash*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.ahash_request*, align 8
  store %struct.crypto_ahash* %0, %struct.crypto_ahash** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load %struct.crypto_ahash*, %struct.crypto_ahash** %3, align 8
  %8 = call i32 @crypto_ahash_digestsize(%struct.crypto_ahash* %7)
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i32, i32* %6, i64 %9
  %11 = call i32 (...) @crypto_tfm_ctx_alignment()
  %12 = call i64 @PTR_ALIGN(i32* %10, i32 %11)
  %13 = inttoptr i64 %12 to i8*
  %14 = bitcast i8* %13 to %struct.ahash_request*
  store %struct.ahash_request* %14, %struct.ahash_request** %5, align 8
  %15 = load %struct.ahash_request*, %struct.ahash_request** %5, align 8
  %16 = load %struct.crypto_ahash*, %struct.crypto_ahash** %3, align 8
  %17 = call i32 @ahash_request_set_tfm(%struct.ahash_request* %15, %struct.crypto_ahash* %16)
  %18 = load %struct.ahash_request*, %struct.ahash_request** %5, align 8
  ret %struct.ahash_request* %18
}

declare dso_local i64 @PTR_ALIGN(i32*, i32) #1

declare dso_local i32 @crypto_ahash_digestsize(%struct.crypto_ahash*) #1

declare dso_local i32 @crypto_tfm_ctx_alignment(...) #1

declare dso_local i32 @ahash_request_set_tfm(%struct.ahash_request*, %struct.crypto_ahash*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
